[package]
name = "aoc"
version = "0.1.0"
authors = ["Anders Sandström <anders.sandstrom89@gmail.com>"]

[dependencies]
regex = "1"
matrix = "0.22.0"
plotters = "0.3.0"
itertools = "0.8.0"
num = "0.1.27"
primes = "0.2.3"
permutohedron = "0.2.4"
linked-hash-map = "0.5.3"
image = "0.13.0"
imageproc = "0.22.0"
rayon = "1.5.0"